[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.package]
authors = ["Shingo OKAWA <shingo.okawa.g.h.c@gmail.com>"]
edition = "2021"
rust-version = "1.77"
keywords = ["io", "async", "non-blocking", "futures"]
readme = "README.md"
description = "A single thread async runtime for self-studying purpose"
license = "Apache-2.0"

[workspace.dependencies]
clap = { version = "4.5.4", features = ["derive"] }
libc = "0.2.154"
pin-project = "1.1.5"