[package]
name = "playground"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
readme.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
little-tokio = { path = "../little-tokio" }